<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:text="@string/multiplayer_fragment_game_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/textView5"
        android:textStyle="bold"
        android:layout_alignParentLeft="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameModeGroup"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true">

        <RadioButton
            android:text="@string/multiplayer_fragment_game_mode_competitive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:id="@+id/competitiveBtn"/>

        <RadioButton
            android:text="@string/multiplayer_fragment_game_mode_cooperative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cooperativeBtn"/>

    </RadioGroup>

    <TextView
        android:text="@string/multiplayer_fragment_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameModeGroup"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/textView3"
        android:textStyle="bold"
        android:layout_alignParentLeft="true" />

    <GridView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/levelGrid"
        android:layout_below="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="auto_fit"
        android:columnWidth="60dp"
        android:isIndicator="true"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center" />


</RelativeLayout>