<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/about_activity_description"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:text="@string/about_activity_description_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <TextView
        android:id="@+id/bricksTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bricks"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_above="@+id/brickInfoLayout"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/brickInfoLayout"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/about_activity_normal_brick"
                android:layout_gravity="center"
                android:layout_weight="60"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="40"
                android:src="@drawable/brick_normal" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/about_activity_hard_brick"
                android:layout_gravity="center"
                android:layout_weight="60"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="40"
                android:src="@drawable/brick_hard" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/about_activity_speedup_brick"
                android:layout_gravity="center"
                android:layout_weight="60"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="40"
                android:layout_gravity="center_vertical"
                android:src="@drawable/brick_speed" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/about_activity_slowdown_brick"
                android:layout_gravity="center"
                android:layout_weight="60"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="40"
                android:layout_gravity="center_vertical"
                android:src="@drawable/brick_speed" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/about_activity_bigger_paddle_brick"
                android:layout_gravity="center"
                android:layout_weight="60"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="40"
                android:layout_gravity="center_vertical"
                android:src="@drawable/brick_bigger_paddle" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/about_activity_core_brick"
                android:layout_gravity="center"
                android:layout_weight="60"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="40"
                android:layout_gravity="center_vertical"
                android:src="@drawable/brick_core" />


        </LinearLayout>


    </LinearLayout>



</RelativeLayout>